# ncp-api-python

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
docs/superpowers/plans/: 2026-06-20-dev-harness.md  2026-06-20-ncp-api-base-layer.md
docs/superpowers/specs/: 2026-06-20-ncp-api-base-layer-design.md  2026-06-20-ncp-api-python-harness-design.md
src/ncp_api/: __init__.py  auth.py  auth_aws.py  client.py  environment.py  exceptions.py
src/ncp_api/adapters/: auto_scaling.py  base.py  block_storage.py  cache.py  cdn.py  cdss.py  classic_auto_scaling.py  cloud_db.py  cloud_insight.py  global_dns.py  hadoop.py  load_balancer.py  mongodb.py  mssql.py  mysql.py  nas.py  nks.py  object_storage.py  postgresql.py  search_engine.py  server.py  source_build.py  source_commit.py  source_deploy.py  source_pipeline.py  vpc.py
src/ncp_api/adapters/fin/: __init__.py
src/ncp_api/adapters/gov/: __init__.py
src/ncp_api/adapters/public/: __init__.py
tests/: conftest.py  test_adapters_base.py  test_adapters_block_storage.py  test_adapters_cache.py  test_adapters_cloud_insight.py  test_adapters_global_dns.py  test_adapters_load_balancer.py  test_adapters_mongodb.py  test_adapters_mysql.py  test_adapters_nas.py  test_adapters_nks.py  test_adapters_object_storage.py  test_adapters_postgresql.py  test_adapters_server.py  test_adapters_vpc.py  test_auth.py  test_client.py  test_environment.py  test_exceptions.py  test_integration.py  test_package.py
